# Automated-Job-Application-Assistant

./: .gitignore  README.md  pyproject.toml
.appdata/linkedin-job-assistant/: assistant.db  assistant.db-journal
.localappdata/linkedin-job-assistant/: assistant.db-journal
src/linkedin_job_assistant/: __init__.py  app_context.py  config.py  database.py  logging_utils.py  main.py  models.py
src/linkedin_job_assistant/services/: __init__.py  apply.py  eligibility.py  external_apply.py  linkedin_client.py  messaging.py  recruiters.py  runner.py  search.py
src/linkedin_job_assistant/ui/: __init__.py  automation_controller.py  main_window.py
tests/: test_eligibility.py  test_external_apply.py  test_messaging.py
